--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -19,22 +19,30 @@
 @import "generic.shared";
 
 @import "base.global";
+@import "base.list";
 
 @import "object.flex-grid";
 @import "object.site";
 @import "object.main-content";
 @import "object.image-ratio";
-@import "object.list";
 @import "object.list-block";
 @import "object.demo-box";
+@import "object.tables";
+@import "object.off-canvas";
+@import "object.icons";
+
 
 @import "component.rss";
 @import "component.helpful-links";
 @import "component.contact-cards";
 @import "component.page-anchors";
 @import "component.images";
+@import "component.quick-links";
+@import "component.utility-nav";
+@import "component.full-page-mask";
 
 @import "demo.site-navigation";
+@import "demo.color-palette";
 
 
 
