--- a/demos/components/index.html
+++ b/demos/components/index.html
@@ -5,4 +5,8 @@ excerpt: Components
 ---
 
 
+    
 
+    <h2><a href="{{ site.baseUrl }}demos/components/contact-cards/">Contact Cards</a></h2>
+   
+ 
