--- a/assets/sass/_generic.shared.scss
+++ b/assets/sass/_generic.shared.scss
@@ -2,3 +2,11 @@
 	border-bottom: none;
 	text-decoration: none;
 }
+
+.position-centered,
+%position-centered {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
+}
