--- a/assets/sass/_object.flex-grid.scss
+++ b/assets/sass/_object.flex-grid.scss
@@ -1,6 +1,5 @@
-
-
-.grid {
+.grid,
+%grid {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
@@ -8,226 +7,285 @@
   padding: 0;
 }
 
-.grid-cell {
+.grid-cell,
+%grid-cell {
   flex: 1;
 }
 
-.grid--flexCells > .grid-cell {
-  display: flex;
+.grid--flex-cells {
+  & > .grid-cell {
+    display: flex;
+  }
 }
 
-.grid--start {
-  align-content: flex-start;
+%grid--flex-cells {
+  & > %grid-cell {
+    display: flex;
+  }
 }
 
-.grid--top {
+.grid--start,
+%grid--start {
+  justify-content: flex-start;
+}
+
+.grid--middle,
+%grid--middle {
+  justify-content: center;
+}
+
+.grid--between,
+%grid--between {
+  justify-content: space-between;
+}
+
+.grid--end,
+%grid--end {
+  justify-content: flex-end;
+}
+
+.grid--top,
+%grid--top {
   align-items: flex-start;
 }
 
-.grid--bottom {
+.grid--content-top,
+%grid--content-top {
+  align-content: flex-start;
+}
+
+.grid--bottom,
+%grid--bottom {
   align-items: flex-end;
 }
 
-.grid--center {
+.grid--center,
+%grid--center {
   align-items: center;
 }
 
-.grid-cell--top {
+.grid--center-all,
+%grid--center-all {
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+}
+
+.grid-cell--top,
+%grid-cell--top {
   align-self: flex-start;
 }
 
-.grid-cell--bottom {
+.grid-cell--bottom,
+%grid-cell--bottom {
   align-self: flex-end;
 }
 
-.grid-cell--center {
+.grid-cell--center,
+%grid-cell--center {
   align-self: center;
 }
 
-.grid--auto > .grid-cell {
-  flex: 0 0 auto;
-}
-
-.grid--fit > .grid-cell {
-  flex: 1;
-}
-
-.grid--full > .grid-cell {
-  flex: 0 0 100%;
-}
-
-.grid--1of2 > .grid-cell {
-  flex: 0 0 50%;
-}
-
-.grid--1of3 > .grid-cell {
-  flex: 0 0 33.3333%;
-}
-
-.grid--1of4 > .grid-cell {
-  flex: 0 0 25%;
-}
-
-@include media(mobile) {
-  .small-grid--fit > .grid-cell {
+@mixin grid-sizing($name: "") {
+  $sep: "-";
+  @if $name == "" {
+    $sep: "";
+  }
+  .#{$name}#{$sep}grid--auto > .grid-cell {
+    flex: 0 1 auto;
+  }
+  %#{$name}#{$sep}grid--auto > %grid-cell {
+    flex: 0 1 auto;
+  }
+  .#{$name}#{$sep}grid--fit > .grid-cell {
     flex: 1;
   }
-  .small-grid--full > .grid-cell {
-    flex: 0 0 100%;
-  }
-  .small-grid--1of2 > .grid-cell {
-    flex: 0 0 50%;
-  }
-  .small-grid--1of3 > .grid-cell {
-    flex: 0 0 33.3333%;
-  }
-  .small-grid--1of4 > .grid-cell {
-    flex: 0 0 25%;
-  }
-}
-
-@include media(tablet) {
-  .med-grid--fit > .grid-cell {
+  %#{$name}#{$sep}grid--fit > %grid-cell {
     flex: 1;
   }
-  .med-grid--full > .grid-cell {
+  .#{$name}#{$sep}grid--full > .grid-cell {
     flex: 0 0 100%;
   }
-  .med-grid--1of2 > .grid-cell {
-    flex: 0 0 50%;
-  }
-  .med-grid--1of3 > .grid-cell {
-    flex: 0 0 33.3333%;
-  }
-  .med-grid--1of4 > .grid-cell {
-    flex: 0 0 25%;
-  }
-}
-
-@include media(desktop) {
-  .large-grid--fit > .grid-cell {
-    flex: 1;
-  }
-  .large-grid--full > .grid-cell {
+  %#{$name}#{$sep}grid--full > %grid-cell {
     flex: 0 0 100%;
   }
-  .large-grid--1of2 > .grid-cell {
+  .#{$name}#{$sep}grid--1of2 > .grid-cell {
     flex: 0 0 50%;
   }
-  .large-grid--1of3 > .grid-cell {
+  %#{$name}#{$sep}grid--1of2 > %grid-cell {
+    flex: 0 0 50%;
+  }
+  .#{$name}#{$sep}grid--1of3 > .grid-cell {
     flex: 0 0 33.3333%;
   }
-  .large-grid--1of4 > .grid-cell {
+  %#{$name}#{$sep}grid--1of3 > %grid-cell {
+    flex: 0 0 33.3333%;
+  }
+  .#{$name}#{$sep}grid--1of4 > .grid-cell {
     flex: 0 0 25%;
   }
-}
-
-
-.gutters {
-  margin-left: -1 * ($margin);
-}
-.gutters > * {
-  padding-left: $padding;
-}
-
-.gutters--large {
-  margin-left: -1 * ($margin--large);
-}
-.gutters--large > * {
-  padding-left: $padding--large;
-}
-
-.gutters--xlarge {
-  margin-left: -1 * ($margin--xlarge);
-}
-.gutters--xlarge > * {
-  padding-left: $padding--xlarge;
-}
-
-.gutters--xxlarge {
-  margin-left: -1 * ($margin--xxlarge);
-}
-.gutters--xxlarge > * {
-  padding-left: $padding--xxlarge;
-}
-
-@include media(mobile) {
-  .small-grid--gutters {
-    margin-left: -1em;
+  %#{$name}#{$sep}grid--1of4 > %grid-cell {
+    flex: 0 0 25%;
   }
-  .small-grid--gutters > .grid-cell {
-    padding-left: 1em;
+  .#{$name}#{$sep}grid--1of5 > .grid-cell {
+    flex: 0 0 20%;
   }
-  .small-grid--guttersLarge {
-    margin-left: -1.5em;
-  }
-  .small-grid--guttersLarge > .grid-cell {
-    padding-left: 1.5em;
-  }
-  .small-grid--gutters2x {
-    margin-left: -2em;
-  }
-  .small-grid--gutters2x > .grid-cell {
-    padding-left: 2em;
-  }
-  .small-grid--gutters3x {
-    margin-left: -3em;
-  }
-  .small-grid--gutters3x > .grid-cell {
-    padding-left: 3em;
+  %#{$name}#{$sep}grid--1of5 > %grid-cell {
+    flex: 0 0 20%;
   }
 }
 
-@include media(tablet) {
-  .med-grid--gutters {
-    margin-left: -1em;
-  }
-  .med-grid--gutters > .grid-cell {
-    padding-left: 1em;
-  }
-  .med-grid--guttersLarge {
-    margin-left: -1.5em;
-  }
-  .med-grid--guttersLarge > .grid-cell {
-    padding-left: 1.5em;
-  }
-  .med-grid--gutters2x {
-    margin-left: -2em;
-  }
-  .med-grid--gutters2x > .grid-cell {
-    padding-left: 2em;
-  }
-  .med-grid--gutters3x {
-    margin-left: -3em;
-  }
-  .med-grid--gutters3x > .grid-cell {
-    padding-left: 3em;
+// create the default grid-sizing modifiers
+@include grid-sizing();
+
+// create grid-sizing modifiers for each breakpoint
+@each $breakpoint in $breakpoints {
+  $name: nth($breakpoint, 2);
+  @include breakpoint($name) {
+    @include grid-sizing($name);
   }
 }
 
-@include media(desktop) {
-  .large-grid--gutters {
-    margin-left: -1em;
+
+
+@mixin grid-placement($name: "") {
+  $sep: "-";
+  @if $name == "" {
+    $sep: "";
   }
-  .large-grid--gutters > .grid-cell {
-    padding-left: 1em;
+
+  .#{$name}#{$sep}grid--end {
+    justify-content: flex-end;
   }
-  .large-grid--guttersLarge {
-    margin-left: -1.5em;
+  %#{$name}#{$sep}grid--end {
+    justify-content: flex-end;
   }
-  .large-grid--guttersLarge > .grid-cell {
-    padding-left: 1.5em;
+
+  .#{$name}#{$sep}grid--center {
+    align-items: center;
   }
-  .large-grid--gutters2x {
-    margin-left: -2em;
+  %#{$name}#{$sep}grid--center {
+    align-items: center;
   }
-  .large-grid--gutters2x > .grid-cell {
-    padding-left: 2em;
+
+  .#{$name}#{$sep}grid--start {
+    justify-content: flex-start;
   }
-  .large-grid--gutters3x {
-    margin-left: -3em;
-  }
-  .large-grid--gutters3x > .grid-cell {
-    padding-left: 3em;
+  %#{$name}#{$sep}grid--start {
+    justify-content: flex-start;
   }
 }
+
+// create the default grid-sizing modifiers
+@include grid-placement();
+
+// create grid-sizing modifiers for each breakpoint
+@each $breakpoint in $breakpoints {
+  $name: nth($breakpoint, 2);
+  @include breakpoint($name) {
+    @include grid-placement($name);
+  }
+}
+
+
+
+@mixin grid-gutters($name: "") {
+  $sep: "-";
+  @if $name == "" {
+    $sep: "";
+  }
+  .#{$name}#{$sep}grid--gutters-none {
+    margin-left: 0;
+    & > .grid-cell {
+      padding-left: 0;
+    }
+  }
+  %#{$name}#{$sep}grid--gutters-none {
+    margin-left: 0;
+    & > .grid-cell {
+      padding-left: 0;
+    }
+  }
+  .#{$name}#{$sep}grid--gutters-small {
+    margin-left: -0.5 * $margin--small;
+    & > .grid-cell {
+      padding-left: $padding--small;
+    }
+  }
+  %#{$name}#{$sep}grid--gutters-small {
+    margin-left: -0.5 * $margin--small;
+    & > %grid-cell {
+      padding-left: $padding--small;
+    }
+  }
+  
+  .#{$name}#{$sep}grid--gutters {
+    margin-left: -1 * $margin;
+    & > .grid-cell {
+      padding-left: $padding;
+    }
+  }
+  %#{$name}#{$sep}grid--gutters {
+    margin-left: -1 * $margin;
+    & > .grid-cell {
+      padding-left: $padding;
+    }
+  }
+
+  .#{$name}#{$sep}grid--gutters-large {
+    margin-left: -1 * $margin--large;
+    & > .grid-cell {
+      padding-left: $padding--large;
+    }
+  }
+  %#{$name}#{$sep}grid--gutters-large {
+    margin-left: -1 * $margin--large;
+    & > %grid-cell {
+      padding-left: $padding--large;
+    }
+  }
+
+  .#{$name}#{$sep}grid--gutters-xlarge {
+    margin-left: -1 * $margin--xlarge;
+    & > .grid-cell {
+      padding-left: $padding--xlarge;
+    }
+  }
+  %#{$name}#{$sep}grid--gutters-xlarge {
+    margin-left: -1 * $margin--xlarge;
+    & > .grid-cell {
+      padding-left: $padding--xlarge;
+    }
+  }
+
+  .#{$name}#{$sep}grid--gutters-xxlarge {
+    margin-left: -1 * $margin--xxlarge;
+    & > .grid-cell {
+      padding-left: $padding--xxlarge;
+    }
+  }
+  %#{$name}#{$sep}grid--gutters-xxlarge {
+    margin-left: -1 * $margin--xxlarge;
+    & > %grid-cell {
+      padding-left: $padding--xxlarge;
+    }
+  }
+}
+
+// create the default grid-gutters modifiers
+@include grid-gutters();
+
+// create grid-gutters modifiers for each breakpoint
+@each $breakpoint in $breakpoints {
+  $name: nth($breakpoint, 2);
+  @include breakpoint($name) {
+    @include grid-gutters($name);
+  }
+} 
+
+
+
+
+
+
+
