--- a/assets/sass/_settings.breakpoints.scss
+++ b/assets/sass/_settings.breakpoints.scss
@@ -4,3 +4,22 @@
 $breakpoint-mobile: 640px;
 $breakpoint-tablet: 641px;
 $breakpoint-desktop: 769px;
+$breakpoint-desktop-big: 2560px;
+
+
+//Using only for the flex grid
+$breakpoints: (
+  "(min-width: 640px)" "small",
+  "(min-width: 641px)" "med",
+  "(min-width: 769px)" "large"
+);
+
+@mixin breakpoint($point) {
+  @each $breakpoint in $breakpoints {
+    $query: nth($breakpoint, 1);
+    $name: nth($breakpoint, 2);
+    @if ($name == $point) {
+      @media #{$query} { @content }
+    }
+  }
+}
