--- a/assets/sass/_component.utility-nav.scss
+++ b/assets/sass/_component.utility-nav.scss
@@ -8,6 +8,9 @@
 		@extend %link--no-decoration;
 		display: inline-block;
 		padding: $padding--tiny;
+		&:hover {
+			background: $msu-blue;
+		}
 	}
 	.icon.sort-white-24:before {
 		transform: matrix(-1, 0, 0, 1, 0, 0);
