--- a/assets/sass/_object.off-canvas.scss
+++ b/assets/sass/_object.off-canvas.scss
@@ -1,11 +1,10 @@
 .off-canvas--right,
 %off-canvas--right {
-	position: absolute;
+	position: fixed;
 	right: 0;
 	top: 0;
 	height: 100%;
 	transform: translateX(100%);
-	transition: ease-out all 0.4s;
 	&.is-showing {
 		transform: translateX(0);
 	}
