--- a/assets/sass/base/typography/typeplate/_typeplate-vars.scss
+++ b/assets/sass/base/typography/typeplate/_typeplate-vars.scss
@@ -203,6 +203,7 @@ $typl8-lede-paragraph-size: modular-scale(1)#{px};
 // -------------------------------------//
 //Figcaptions, Contact Cards
 $typl8-smaller-font-size: 0.842105263rem; // = 16/19
+$typl8-smallest-font-size: 0.684210526rem; // = 13/19
 
 
 // $Pull-Quotes
