--- a/demos/components/quick-links/index.html
+++ b/demos/components/quick-links/index.html
@@ -31,7 +31,7 @@ excerpt: Quick Links
 <ul>
 	<li class="is-selected"><a href="#popular-list">Top links</a></li>
 	<li><a href="#student-list">Students</a></li>
-	<li><a href="#faculty-list">Faculty</a></li>
+	<li><a href="#faculty-list">Faculty &amp; Staff</a></li>
 </ul>
 </nav>
 <nav class="list-group">
@@ -55,4 +55,6 @@ excerpt: Quick Links
 	<li><a href="">Support Site</a></li>
 </ul>
 </nav>
+
 </div>
+<a class="js-mobile-quick-links-toggle close-button">Close</a>
