--- a/templates/default.html
+++ b/templates/default.html
@@ -21,8 +21,8 @@
             {{ page.content }}
         </div>
     </main>
-    <footer class="Site-footer">
-        <div class="Footer">
+    <footer class="site-footer">
+        <div class="footer">
             {% include 'footer.html' %}
         </div>
     </footer>
