--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,17 @@
   color: #c8c8c8;
 }
 
+/*
+$breakpoints: (
+    "palm"          "screen and (max-width: 44.9375em)",
+    "lap"           "screen and (min-width: 45em) and (max-width: 63.9375em)",
+    "lap-and-up"    "screen and (min-width: 45em)",
+    "portable"      "screen and (max-width: 63.9375em)",
+    "desk"          "screen and (min-width: 64em)",
+    "retina"        "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx)"
+) !default;
+
+*/
 @-ms-viewport {
   width: device-width;
 }
@@ -259,6 +270,7 @@ small {
 input,
 abbr,
 .quick-links .tabs a,
+.close-button,
 acronym,
 blockquote,
 code,
@@ -285,17 +297,14 @@ code {
   font-family: monospace;
 }
 
-abbr, .quick-links .tabs a {
-  -webkit-font-variant: small-caps;
-  -moz-font-variant: small-caps;
-  -ms-font-variant: small-caps;
-  font-variant: small-caps;
+abbr, .quick-links .tabs a, .close-button {
   font-weight: 600;
-  text-transform: lowercase;
+  text-transform: uppercase;
+  font-size: 0.68421rem;
   color: gray;
   letter-spacing: 0.05263rem;
 }
-abbr[title]:hover, .quick-links .tabs a[title]:hover {
+abbr[title]:hover, .quick-links .tabs a[title]:hover, [title].close-button:hover {
   cursor: help;
 }
 
@@ -450,6 +459,38 @@ p + .typl8-drop-cap {
  * Extend this object into your markup.
  *
  */
+.transition--off-canvas,
+.quick-links {
+  transition-duration: 0.28s;
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -webkit-transform: translate3d(0, 0, 0);
+}
+
+.transition--off-canvas-top,
+.site-navigation {
+  transition-duration: 0.28s;
+  transition-property: max-height;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -webkit-transform: translate3d(0, 0, 0);
+}
+
+.transition--opacity,
+.full-page-mask {
+  transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -webkit-transform: translate3d(0, 0, 0);
+}
+
+.page-title {
+  margin-bottom: 0;
+}
+
 .header__feed-link, .helpful-links a, .page-anchors ul li a, .quick-links a, .utility-nav .icon, .site-navigation a {
   border-bottom: none;
   text-decoration: none;
@@ -474,6 +515,10 @@ html {
   overflow-x: hidden;
 }
 
+body {
+  margin: 0;
+}
+
 *,
 *::after,
 *::before {
@@ -485,6 +530,7 @@ a {
   color: #5381ac;
   text-decoration: none;
   font-weight: 500;
+  cursor: pointer;
 }
 
 a:focus,
@@ -998,6 +1044,7 @@ ul, ol, dd {
 .container,
 .site-header__wrapper,
 .site-content__wrapper,
+.footer,
 .site-navigation ul {
   width: 100%;
   max-width: 50rem;
@@ -1175,12 +1222,11 @@ ul, ol, dd {
 
 .off-canvas--right,
 .quick-links {
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
   height: 100%;
   transform: translateX(100%);
-  transition: ease-out all 0.4s;
 }
 .off-canvas--right.is-showing,
 .is-showing.quick-links {
@@ -1188,10 +1234,11 @@ ul, ol, dd {
 }
 
 .gmail-logo:before {
-  background-image: url("/images/gmail-logo.svg") !important;
+  background-image: url("http://upload.wikimedia.org/wikipedia/commons/thumb/4/45/New_Logo_Gmail.svg/2000px-New_Logo_Gmail.svg.png") !important;
   width: 2.4em;
   height: 2.4em;
-  background-size: 2.4em 2.4em !important;
+  background-size: contain !important;
+  background-position: center;
 }
 
 .canvas-logo:before {
@@ -1206,6 +1253,13 @@ ul, ol, dd {
   width: 2.4em;
   height: 2.4em;
   background-size: cover !important;
+}
+
+.site-footer {
+  padding: 1.65rem;
+  font-size: smaller;
+  color: white;
+  background: #4d4e53;
 }
 
 .feed__header {
@@ -1252,12 +1306,9 @@ ul, ol, dd {
 }
 
 .article__meta-content {
-  -webkit-font-variant: small-caps;
-  -moz-font-variant: small-caps;
-  -ms-font-variant: small-caps;
-  font-variant: small-caps;
   font-weight: 700;
-  text-transform: lowercase;
+  text-transform: uppercase;
+  font-size: 0.68421rem;
   color: #797979;
   letter-spacing: 0.05263rem;
   -webkit-font-smoothing: antialiased;
@@ -1422,9 +1473,40 @@ ul, ol, dd {
   text-align: center;
 }
 
+.helper {
+  box-shadow: 0 15px 24px rgba(0, 0, 0, 0.22), 0 19px 76px rgba(0, 0, 0, 0.3);
+  position: absolute;
+  background: #1291B9;
+  padding: 0.4125rem 0.825rem;
+  z-index: 998;
+  color: #fff;
+  font-weight: 500;
+  font-size: 16px;
+  right: 48px;
+  line-height: 1;
+  border-radius: 2px;
+  margin-top: 0.4125rem;
+}
+.helper:after {
+  width: 0;
+  height: 0;
+  content: '';
+  z-index: 2;
+  border-left: 0.75em solid #1291B9;
+  border-bottom: 0.5em solid transparent;
+  border-top: 0.5em solid transparent;
+  position: absolute;
+  transform: translateX(100%);
+  right: 0;
+}
+
 .quick-links {
+  -webkit-backface-visibility: hidden;
   background: #f8f9fb;
   z-index: 1000;
+}
+.quick-links.is-showing {
+  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.23), 0 3px 12px rgba(0, 0, 0, 0.16);
 }
 .quick-links .featured {
   margin: 0;
@@ -1436,7 +1518,7 @@ ul, ol, dd {
   color: #fafafa;
 }
 .quick-links .featured a:hover {
-  background: #3c5670;
+  color: #ecac00;
 }
 .quick-links .featured .icon {
   margin-right: 0.825rem;
@@ -1462,15 +1544,14 @@ ul, ol, dd {
 }
 .quick-links .tabs a {
   color: #8995a1;
-  padding: 0 0.4125rem;
+  padding: 0.4125rem;
   display: inline-block;
 }
 .quick-links .tabs a:hover {
   color: #c4cad0;
 }
 .quick-links .tabs .is-selected a {
-  color: white;
-  border-bottom: solid 4px #ecac00;
+  color: #ecac00;
 }
 .quick-links .list-group {
   position: relative;
@@ -1486,7 +1567,6 @@ ul, ol, dd {
   border-bottom: solid thin #dbdfe2;
   width: 100%;
   display: inline-block;
-  transition: ease-out color 0.18s;
 }
 .quick-links .list-group a:hover {
   color: #ecac00;
@@ -1498,12 +1578,33 @@ ul, ol, dd {
   margin-left: 0;
 }
 
+.close-button {
+  padding: 0.4125rem 0.825rem;
+  background: #f2f2f2;
+  color: #bfbfbf;
+  position: absolute;
+  bottom: 1.65rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.close-button:hover {
+  color: #7f7f7f;
+}
+@media (min-width: 641px) {
+  .close-button {
+    display: none;
+  }
+}
+
 .utility-nav {
   background: #142C43;
 }
 .utility-nav .icon {
   display: inline-block;
   padding: 0.4125rem;
+}
+.utility-nav .icon:hover {
+  background: #5381ac;
 }
 .utility-nav .icon.sort-white-24:before {
   transform: matrix(-1, 0, 0, 1, 0, 0);
@@ -1512,7 +1613,7 @@ ul, ol, dd {
 .full-page-mask {
   top: 0;
   opacity: 0;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 0;
   background: rgba(0, 0, 0, 0.5);
@@ -1541,7 +1642,6 @@ ul, ol, dd {
   overflow: hidden;
   max-height: 0;
   background: #f5f5f5;
-  transition: ease-out max-height 0.4s;
 }
 .site-navigation ul {
   padding-top: 1.65rem;
