--- a/assets/images/css/sprite.css
+++ b/assets/images/css/sprite.css
@@ -8,141 +8,129 @@
     display: inline-block;
     background-image: url("../svg/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 4.8em 79.2em;
+    background-size: 4.8em 72em;
 }
 
 .no-svg .icon:before {
     background-image: url("../svg/sprite.png");
 }
 
-.icon.account_circle-grey-24:before {
+.icon.business-grey-24:before {
     background-position: 0em 0em;
     width: 2.4em;
     height: 2.4em;
 }
 
-.icon.account_circle-grey-48:before {
+.icon.business-grey-48:before {
     background-position: 0em -2.4em;
     width: 4.8em;
     height: 4.8em;
 }
 
-.icon.add-grey-24:before {
+.icon.business-white-24:before {
     background-position: 0em -7.2em;
     width: 2.4em;
     height: 2.4em;
 }
 
-.icon.add-grey-48:before {
+.icon.business-white-48:before {
     background-position: 0em -9.6em;
     width: 4.8em;
     height: 4.8em;
 }
 
-.icon.close-grey-24:before {
+.icon.mail-grey-24:before {
     background-position: 0em -14.4em;
     width: 2.4em;
     height: 2.4em;
 }
 
-.icon.close-grey-48:before {
+.icon.mail-grey-48:before {
     background-position: 0em -16.8em;
     width: 4.8em;
     height: 4.8em;
 }
 
-.icon.fullscreen-grey-24:before {
+.icon.mail-white-24:before {
     background-position: 0em -21.6em;
     width: 2.4em;
     height: 2.4em;
 }
 
-.icon.fullscreen-grey-48:before {
+.icon.mail-white-48:before {
     background-position: 0em -24em;
     width: 4.8em;
     height: 4.8em;
 }
 
-.icon.local_shipping-grey-24:before {
+.icon.menu-grey-24:before {
     background-position: 0em -28.8em;
     width: 2.4em;
     height: 2.4em;
 }
 
-.icon.local_shipping-grey-48:before {
+.icon.menu-grey-48:before {
     background-position: 0em -31.2em;
     width: 4.8em;
     height: 4.8em;
 }
 
-.icon.lock-grey-24:before {
+.icon.menu-white-24:before {
     background-position: 0em -36em;
     width: 2.4em;
     height: 2.4em;
 }
 
-.icon.lock-grey-48:before {
+.icon.menu-white-48:before {
     background-position: 0em -38.4em;
     width: 4.8em;
     height: 4.8em;
 }
 
-.icon.menu-grey-24:before {
+.icon.search-grey-24:before {
     background-position: 0em -43.2em;
     width: 2.4em;
     height: 2.4em;
 }
 
-.icon.menu-grey-48:before {
+.icon.search-grey-48:before {
     background-position: 0em -45.6em;
     width: 4.8em;
     height: 4.8em;
 }
 
-.icon.place-grey-24:before {
+.icon.search-white-24:before {
     background-position: 0em -50.4em;
     width: 2.4em;
     height: 2.4em;
 }
 
-.icon.place-grey-48:before {
+.icon.search-white-48:before {
     background-position: 0em -52.8em;
     width: 4.8em;
     height: 4.8em;
 }
 
-.icon.remove-grey-24:before {
+.icon.sort-grey-24:before {
     background-position: 0em -57.6em;
     width: 2.4em;
     height: 2.4em;
 }
 
-.icon.remove-grey-48:before {
+.icon.sort-grey-48:before {
     background-position: 0em -60em;
     width: 4.8em;
     height: 4.8em;
 }
 
-.icon.shopping_basket-grey-24:before {
+.icon.sort-white-24:before {
     background-position: 0em -64.8em;
     width: 2.4em;
     height: 2.4em;
 }
 
-.icon.shopping_basket-grey-48:before {
+.icon.sort-white-48:before {
     background-position: 0em -67.2em;
-    width: 4.8em;
-    height: 4.8em;
-}
-
-.icon.store_mall_directory-grey-24:before {
-    background-position: 0em -72em;
-    width: 2.4em;
-    height: 2.4em;
-}
-
-.icon.store_mall_directory-grey-48:before {
-    background-position: 0em -74.4em;
     width: 4.8em;
     height: 4.8em;
 }
