--- a/assets/sass/_component.full-page-mask.scss
+++ b/assets/sass/_component.full-page-mask.scss
@@ -1,7 +1,8 @@
 .full-page-mask {
+	@extend %transition--opacity;
 	top: 0;
 	opacity: 0;
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	height: 0;
 	background: rgba(0,0,0,0.5);
