--- a/assets/sass/_object.icons.scss
+++ b/assets/sass/_object.icons.scss
@@ -1,20 +1,25 @@
+.icon.gmail-logo {
+
+}
+
 .gmail-logo:before {
-	background-image: url("/images/gmail-logo.svg") !important;
-	width: 2.4em;
-	height: 2.4em;
-	background-size: 2.4em 2.4em !important;
+    background-image: url("http://upload.wikimedia.org/wikipedia/commons/thumb/4/45/New_Logo_Gmail.svg/2000px-New_Logo_Gmail.svg.png")!important;
+    width: 2.4em;
+    height: 2.4em;
+    background-size: contain !important;
+    background-position: center;
 }
 
 .canvas-logo:before {
-	background-image: url("http://a5.mzstatic.com/us/r30/Purple1/v4/80/1d/c7/801dc739-ae47-db66-df0e-1780aa7325f5/icon175x175.jpeg") !important;
-	width: 2.4em;
-	height: 2.4em;
-	background-size: 2.4em 2.4em !important;
+    background-image: url("http://a5.mzstatic.com/us/r30/Purple1/v4/80/1d/c7/801dc739-ae47-db66-df0e-1780aa7325f5/icon175x175.jpeg") !important;
+    width: 2.4em;
+    height: 2.4em;
+    background-size: 2.4em 2.4em !important;
 }
 
 .banner-logo:before {
-	background-image: url("http://www.ellucian.com/uploadedImages/Images/Software/banner-by-ellucian.png") !important;
-	width: 2.4em;
-	height: 2.4em;
-	background-size: cover !important;
+    background-image: url("http://www.ellucian.com/uploadedImages/Images/Software/banner-by-ellucian.png") !important;
+    width: 2.4em;
+    height: 2.4em;
+    background-size: cover !important;
 }
