--- a/templates/head.html
+++ b/templates/head.html
@@ -6,8 +6,8 @@
     <meta name="MobileOptimized" content="320">
     <meta name=viewport content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="{{ site.description }}">
-    <link href="{{ site.baseUrl }}main.css" rel="stylesheet" type="text/css">
-    <link href="{{ site.baseUrl }}svg/css/sprite.css" rel="stylesheet">
+    <link href="{{ site.baseUrl }}style.css" rel="stylesheet" type="text/css">
+    <link href="{{ site.baseUrl }}images/css/sprite.css" rel="stylesheet">
     
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script class="js-allow-before-footer" src="//use.typekit.net/{{ site.typekitKitId }}.js"></script>
