--- a/templates/quick-links.html
+++ b/templates/quick-links.html
@@ -11,54 +11,62 @@
     })
     </script>
     <nav class="utility-nav">
-            <ul>
-                <li><a class="icon search-white-24"></a></li>
-                <li><a class="js-quick-links-toggle icon sort-white-24"></a></li>
-            </ul>
-        </nav>
+        <ul>
+            <li>
+                <a class="icon search-white-24"></a>
+            </li>
+            <li>
+                <a class="js-quick-links-toggle icon sort-white-24"></a>
+            </li>
+        </ul>
+    </nav>
     <header class="site-header">
-        
         <div class="site-header__wrapper">
-            <a class="js-site-navigation-toggle icon menu-white-48 link--no-decoration"></a>
-            <h1>{{ page.title }}</h1>
+            <a class="js-site-navigation-toggle icon menu-white-48 link--no-decoration" onClick=""></a>
+            <h1 class="page-title">{{ page.title }}</h1>
+            <a class="link--no-decoration" href="https://msu.hackpad.com/Quick-Links-qy3ycLJu7DH">View on Hackpad</a>
         </div>
     </header>
     <main class="site-content">
         <div class="site-content__wrapper">
-            
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex beatae nemo illum, a expedita, eos dolore molestias officiis repudiandae libero aut sapiente obcaecati nam sequi earum quasi tenetur minus cum.</p>
+            <p>Quaerat sunt quae explicabo saepe ratione nostrum aperiam voluptate labore repellat, illo nulla, tempore, quisquam tempora earum obcaecati architecto ad quod harum eos velit? Aliquid maxime possimus, error voluptatibus unde.</p>
+            <p>Tempora consequuntur, ut consectetur, commodi, optio delectus cum ipsam ad vero soluta fugiat. Nam dignissimos, sed numquam aperiam laudantium? Veritatis modi autem eligendi possimus voluptates temporibus quos. Corporis, est, neque!</p>
+            <p>Laboriosam, expedita, saepe! Cum omnis iste nulla maxime dolorum doloremque mollitia officia nemo provident sapiente voluptate, corporis eaque eos quos veritatis voluptates inventore vel atque quasi sequi! Similique, molestiae, debitis.</p>
+            <p>Necessitatibus sapiente sit modi dolorum vel harum ut libero beatae, praesentium, nam perspiciatis at reprehenderit quibusdam, illo ipsum commodi excepturi, eos omnis ex! Recusandae voluptatem commodi porro, ratione maiores assumenda.</p>
+            <p>Quibusdam odit unde eveniet modi delectus optio, officiis! Omnis corporis totam veritatis cupiditate iste commodi voluptatum fugit exercitationem, accusantium ut possimus, rem assumenda eius! Asperiores natus quod sequi deserunt accusantium.</p>
         </div>
-
     </main>
     <aside class="quick-links">
         {{ page.content }}
     </aside>
-    <div class="js-quick-links-toggle full-page-mask"></div>
-    <footer class="Site-footer">
-        <div class="Footer">
+    <div class="js-quick-links-toggle full-page-mask" onClick=""></div>
+    <footer class="site-footer">
+        <div class="footer">
             {% include 'footer.html' %}
         </div>
     </footer>
     <script>
-    $(function() {
-        $(document).on('click','.js-quick-links-toggle',function(){
+    $(document).on('touchstart click', '.js-quick-links-toggle', function(event) {
+            event.stopPropagation();
             $('.quick-links').toggleClass('is-showing');
             $('.full-page-mask').toggleClass('is-showing');
         });
-    
-        $(document).ready(function() {
-    $(".tabs a").click(function() {
-        $(".list-group ul").hide();
-        $($(this).attr("href")).show();
-        $(this).parent('li').addClass('is-selected').siblings().removeClass('is-selected');
-    });
-})
+
+    $(document).on('click', '.js-mobile-quick-links-toggle', function(event) {
+            event.stopPropagation();
+            $('.quick-links').toggleClass('is-showing');
+            $('.full-page-mask').toggleClass('is-showing');
+        });
+
+        
         $("a").each(function() {
             var path = "{{ site.baseUrl }}" + window.location.pathname;
             if ($(this).attr("href") == window.location.pathname) {
                 $(this).addClass("is-current");
             }
         });
-    });
+
     </script>
     {% include 'scripts.html' %}
 </body>
